--- a/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
+++ b/Friday.ERP.Client/Pages/CustomerVendorManagement/Index.razor
@@ -51,7 +51,7 @@
                                     <MudTh>အီးမေးလ်</MudTh>
                                     <MudTh>နေရပ်</MudTh>
                                     <MudTh>ကျန်ငွေ/ပိုငွေ</MudTh>
-                                    <MudTh>Action</MudTh>
+                                    <MudTh>-</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
                                     <MudTd DataLabel="Name">@context.Code</MudTd>
@@ -114,7 +114,7 @@
                                     <MudTh>အီးမေးလ်</MudTh>
                                     <MudTh>နေရပ်</MudTh>
                                     <MudTh>ကျန်ငွေ/ပိုငွေ</MudTh>
-                                    <MudTh>Action</MudTh>
+                                    <MudTh>-</MudTh>
                                 </HeaderContent>
                                 <RowTemplate>
                                     <MudTd DataLabel="Name">@context.Code</MudTd>
